[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
# Use for 
clap = { version = "4.0.18", features = ["derive"] }
indicatif = "0.17.1"
log = "0.4.17"

[dev-dependencies]
assert_cmd = "2.0.5"
assert_fs = "1.0.7"
predicates = "2.1.1"
